Starting to make logic for order

--- a/templates/service/service_detail.html
+++ b/templates/service/service_detail.html
@@ -9,12 +9,12 @@
     <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">CREOVATE {{ request.user.username }}</a>
+                <a class="navbar-brand" href="#!">CREOVATE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">My Wallet</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'wallet' username=request.user.username %}">My Wallet</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -54,9 +54,13 @@
                     <div class="col-md-6">
                         <div class="small mb-1">{{ service.category }}</div>
                         <h1 class="display-5 fw-bolder">{{ service.title }}</h1>
-                        <div class="fs-5 mb-5">
+                        <div class="fs-5 mb-3">
                             <span>Rp.{{ service.price }}</span>
                         </div>
+                        <div class="d-flex gap-2 mb-5">
+                              <img src="{{ service.freelance.image_profile.url }}" width="38" class="rounded-circle">
+                              <p>added By {{ service.freelance.username }}</p>
+                          </div>
                         <p class="lead">{{ service.description }}</p>
                         <div class="d-flex">
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
@@ -80,6 +84,10 @@
                                 <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ service.service_image.url }}">
                                 <div class="card-body">
                                     <p class="card-text">{{ service.title }}</p>
+                                    <div class="d-flex gap-2 mb-3">
+                                        <img src="{{ service.freelance.image_profile.url }}" width="38" class="rounded-circle">
+                                        <p>added By {{ service.freelance.username }}</p>
+                                    </div>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <a href="{% url 'service' slug=service.slug %}">
@@ -92,8 +100,11 @@
                             </div>
                         </div>
                         
-                        {% empty %}
-                        <h1>No related Services</h1>
+                    {% empty %}
+                        <div class="container mt-3">
+                            <h2 class="text-center">No other freelancers are offering this service yet</h2>
+                            <img class="d-block mx-auto my-5" src="https://www.hudle.in/icons/home/communityStep-1.png" alt="no-service-image" width="250" height="250">
+                        </div>
                     {% endfor %}
                 </div>
             </div>
