--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -10,12 +10,12 @@
     <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">CREOVATE {{ request.user.username }}</a>
+                <a class="navbar-brand" href="#!">CREOVATE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'add_wallet' username=request.user.username %}">My Wallet</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'wallet' username=request.user.username %}">My Wallet</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Category</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -62,6 +62,11 @@
                       <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="{{ service.service_image.url }}" alt="service-image">
                       <div class="card-body">
                           <p class="card-text">{{ service.title }}</p>
+                          <div class="d-flex gap-2 mb-3">
+                              <img src="{{ service.freelance.image_profile.url }}" width="38" class="rounded-circle">
+                              <p>added By {{ service.freelance.username }}</p>
+                          </div>
+                          
                           <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <a href="{% url 'service' slug=service.slug %}">
