Complete the logic for order

--- a/templates/common/about.html
+++ b/templates/common/about.html
@@ -3,10 +3,9 @@
 
 {% block content %}
     {% include 'wave_container.html' %}
-    {% include 'navbar.html' %}
     
     <!-- Content Section -->
-     <div class="container">
+     <div class="container mt-5">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -52,7 +51,7 @@
 
      <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
+        <div class="col-lg-6">
           <img  src="https://a.storyblok.com/f/177206/1223x765/e59e106b1d/an-illustration-of-a-freelancer-working.png" class="d-block mx-lg-auto img-fluid rounded-5" alt="Section1" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -64,7 +63,7 @@
     
      <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
+        <div class="col-lg-6">
           <img src="https://www.allianz.co.id/explore/intip-website-cari-kerja-untuk-freelancer-pemula/_jcr_content/root/stage/stageimage.img.82.3360.jpeg/1685369026154/intip-website-cari-kerja-untuk-freelancer-pemula.jpeg" class="d-block mx-lg-auto img-fluid rounded-5" alt="Section2" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
