--- a/templates/service/add_service.html
+++ b/templates/service/add_service.html
@@ -49,7 +49,7 @@
 
     <div class="container col-xxl-8 px-4">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
+          <div class="col-lg-6">
             <img src="https://t3.ftcdn.net/jpg/02/76/34/74/360_F_276347475_XLF6MQQ1hj85TN2TkfQtMPWju8a8Ktmh.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-    <form class="container col-6 col-md-6 col-sm-9 mb-5" method="POST" enctype="multipart/form-data">
+    <form class="container col-lg-6 mb-5" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Title</label>
