--- a/templates/user/wallet_customer.html
+++ b/templates/user/wallet_customer.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block header %}
-    {% include 'head/profile_header.html' %}
+    {% include 'head/wallet.html' %}
 {% endblock %}
 
 {% block content %}
@@ -16,7 +16,14 @@
               <!-- Breadcrumb -->
               <nav aria-label="breadcrumb" class="main-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                  <li class="breadcrumb-item">
+                      <a class="icon-link icon-link-hover text-decoration-none" href="{% url 'home' %}" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                              <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+                          </svg>
+                          Home
+                      </a>
+                  </li>
                   <li class="breadcrumb-item active" aria-current="page">User Profile</li>
                 </ol>
               </nav>
@@ -42,39 +49,49 @@
                 <div class="col-md-8">
                   <div class="card mb-3 rounded-4">
                     <div class="card-body mt-3">
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Full Name</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            {{ request.user.first_name }} {{ request.user.last_name }}
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Username</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                          {{ request.user.username }}
-                        </div>
-                      </div>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-3">
-                          <h6 class="mb-0">Email</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                          {{ request.user.email }}
-                        </div>
-                      </div>
-                      <hr>
-                      <hr>
-                      <div class="row">
-                        <div class="col-sm-12">
-                          <a class="btn btn-info " href="{% url 'update_profile' username=request.user.username %}">Edit</a>
-                        </div>
-                      </div>
+                      {% if wallet %}
+                          <div class="row">
+                              <div class="col-sm-3">
+                                  <h6 class="mb-0">Full Name</h6>
+                              </div>
+                              <div class="col-sm-9 text-secondary">
+                                  {{ wallet.profile.first_name }} {{ wallet.profile.last_name }}
+                              </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                              <div class="col-sm-3">
+                                  <h6 class="mb-0">Username</h6>
+                              </div>
+                              <div class="col-sm-9 text-secondary">
+                                  {{ wallet.profile.username }}
+                              </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                              <div class="col-sm-3">
+                                  <h6 class="mb-0">Email</h6>
+                              </div>
+                              <div class="col-sm-9 text-secondary">
+                                  {{ wallet.profile.email }}
+                              </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                              <div class="col-sm-3">
+                                  <h6 class="mb-0">Balance</h6>
+                              </div>
+                              <div class="col-sm-9 text-secondary">
+                                  {{ wallet.balance }}
+                              </div>
+                          </div>
+                          <hr>
+                          <div class="row">
+                              <div class="col-sm-12">
+                                  <a class="btn btn-info " href="{% url 'update_wallet_customer' username=request.user.username %}">Add Balance</a>
+                              </div>
+                          </div>
+                      {% endif %}
                     </div>
                   </div>
                 </div>
@@ -102,5 +119,6 @@
                 </div>
             </div>
         </div>
+        {% include 'footer/home_footer.html' %}
     </div>
 {% endblock %}
